--- a/vars/adoptopenjdk/CentOS-8.yml
+++ b/vars/adoptopenjdk/CentOS-8.yml
@@ -1,7 +1,5 @@
 ---
-java_open_jdk_apt_extra_packages:
-  - python-apt
-  - apt-transport-https
+java_open_jdk_apt_extra_packages: []
 __java_open_jdk_version_major: 8
 # Supported major releases: 8 and from 11 to 14; hotspot and openj9 implementations
 
