#153 fixed ubuntu tests; updated pipfiles

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 ---
 dist: bionic
 language: python
-python: 3.7
+python: 3.9
 sudo: required
 services:
 - docker
@@ -31,7 +31,7 @@ env:
   - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial JDK_MAJOR=8 JDK_VERSION=8u292-b10-0ubuntu1~16.04.1 DOCKER_TAG_TO_PUBLISH=8u292-xenial-openjdk-headless
   - DOCKER_IMAGE_BASE=amd64/ubuntu:xenial JDK_MAJOR=9 JDK_VERSION=9~b114-0ubuntu1 DOCKER_TAG_TO_PUBLISH=9b114-xenial-openjdk-headless
   - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic DOCKER_TAG_TO_PUBLISH=11-bionic-openjdk-headless
-  - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic JDK_MAJOR=11 JDK_VERSION=11.0.11+9-0ubuntu2~18.04-0ubuntu1~18.04.1 DOCKER_TAG_TO_PUBLISH=11.0.11-bionic-openjdk-headless
+  - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic JDK_MAJOR=11 JDK_VERSION=11.0.11+9-0ubuntu2~18.04 DOCKER_TAG_TO_PUBLISH=11.0.11-bionic-openjdk-headless
   - DOCKER_IMAGE_BASE=amd64/ubuntu:bionic JDK_MAJOR=8 JDK_VERSION=8u292-b10-0ubuntu1~18.04 DOCKER_TAG_TO_PUBLISH=8u292-bionic-openjdk-headless
   - DOCKER_IMAGE_BASE=amd64/ubuntu:focal DOCKER_TAG_TO_PUBLISH=14-focal-openjdk-headless
   - DOCKER_IMAGE_BASE=amd64/ubuntu:focal JDK_MAJOR=14 JDK_VERSION=14.0.2+12-1~20.04 DOCKER_TAG_TO_PUBLISH=14.0.2-focal-openjdk-headless
