--- a/vars/openjdk/Ubuntu-20.yml
+++ b/vars/openjdk/Ubuntu-20.yml
@@ -1,12 +1,13 @@
 ---
-
+java_open_jdk_apt_extra_packages:
+  - python3-apt
+  - apt-transport-https
+  - gnupg2
 # Using pattern described in Ansible Best Practices and Conventions (Appendix B), Ansible for Devops (p. 406)
 __java_open_jdk_version_major: 14
 # Supported openjdk major releases: 8, 11, 13, 14
 
-# Needed because Ubuntu Bionic SRU Exception with OpenJDK
-__java_required_repositories_openjdk:
-  - "ppa:openjdk-r/ppa"
+__java_required_repositories_openjdk: []
 __java_required_libs_openjdk: []
 __java_required_key_repositories_openjdk: []
 
