--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ env:
   - DOCKER_IMAGE_BASE=debian:buster-slim DOCKER_TAG_TO_PUBLISH=11-buster-openjdk-headless
   - DOCKER_IMAGE_BASE=debian:buster-slim JDK_MAJOR=11 JDK_VERSION=11.0.14+9-1~deb10u1 DOCKER_TAG_TO_PUBLISH=11.0.14-buster-openjdk-headless
   - DOCKER_IMAGE_BASE=debian:bullseye-slim DOCKER_TAG_TO_PUBLISH=11-bullseye-openjdk-headless
-  - DOCKER_IMAGE_BASE=debian:bullseye-slim JDK_MAJOR=11 JDK_VERSION=11.0.13+8-1~deb11u1 DOCKER_TAG_TO_PUBLISH=11.0.13-bullseye-openjdk-headless
+  - DOCKER_IMAGE_BASE=debian:bullseye-slim JDK_MAJOR=11 JDK_VERSION=11.0.14+9-1~deb11u1 DOCKER_TAG_TO_PUBLISH=11.0.14-bullseye-openjdk-headless
   - DOCKER_IMAGE_BASE=ubuntu:xenial DOCKER_TAG_TO_PUBLISH=9-xenial-openjdk-headless
   - DOCKER_IMAGE_BASE=ubuntu:xenial JDK_MAJOR=8 JDK_VERSION=8u292-b10-0ubuntu1~16.04.1 DOCKER_TAG_TO_PUBLISH=8u292-xenial-openjdk-headless
   - DOCKER_IMAGE_BASE=ubuntu:xenial JDK_MAJOR=9 JDK_VERSION=9~b114-0ubuntu1 DOCKER_TAG_TO_PUBLISH=9b114-xenial-openjdk-headless
@@ -32,13 +32,13 @@ env:
   - DOCKER_IMAGE_BASE=ubuntu:focal JDK_MAJOR=17 JDK_VERSION=17.0.1+12-1~20.04 DOCKER_TAG_TO_PUBLISH=17.0.1-focal-openjdk-headless
   - DOCKER_IMAGE_BASE=ubuntu:focal JDK_MAJOR=8 JDK_VERSION=8u312-b07-0ubuntu1~20.04 DOCKER_TAG_TO_PUBLISH=8u312-focal-openjdk-headless
   - DOCKER_IMAGE_BASE=centos:7 JDK_MAJOR=11 JDK_VERSION=11.0.12.0.7 DOCKER_TAG_TO_PUBLISH=11.0.12.0.7-centos7-openjdk-headless
-  - DOCKER_IMAGE_BASE=centos:8 JDK_MAJOR=11 JDK_VERSION=11.0.13.0.8 DOCKER_TAG_TO_PUBLISH=11.0.13.0.8-centos8-openjdk-headless
+  - DOCKER_IMAGE_BASE=quay.io/centos/centos:stream8 JDK_MAJOR=11 JDK_VERSION=11.0.13.0.8 DOCKER_TAG_TO_PUBLISH=11.0.13.0.8-centos8-openjdk-headless
   - DOCKER_IMAGE_BASE=debian:bullseye-slim JDK_VENDOR=adoptopenjdk JDK_MAJOR=8 JDK_VERSION=8u292-b10-3 DOCKER_TAG_TO_PUBLISH=8u292-bullseye-adoptopenjdk-headless
   - DOCKER_IMAGE_BASE=debian:buster-slim JDK_VENDOR=adoptopenjdk JDK_MAJOR=8 JDK_VERSION=8u292-b10-3 DOCKER_TAG_TO_PUBLISH=8u292-buster-adoptopenjdk-headless
-  - DOCKER_IMAGE_BASE=centos:8 JDK_VENDOR=adoptopenjdk JDK_MAJOR=8 JDK_VERSION=8u292_b10 DOCKER_TAG_TO_PUBLISH=8u292-centos8-adoptopenjdk-headless
+  - DOCKER_IMAGE_BASE=quay.io/centos/centos:stream8 JDK_VENDOR=adoptopenjdk JDK_MAJOR=8 JDK_VERSION=8u292_b10 DOCKER_TAG_TO_PUBLISH=8u292-centos8-adoptopenjdk-headless
   - DOCKER_IMAGE_BASE=debian:bullseye-slim JDK_VENDOR=corretto JDK_MAJOR=1.8.0 JDK_VERSION=1:8.302.08-1 DOCKER_TAG_TO_PUBLISH=8u302-bullseye-corretto-headless
   - DOCKER_IMAGE_BASE=debian:buster-slim JDK_VENDOR=corretto JDK_MAJOR=1.8.0 JDK_VERSION=1:8.302.08-1 DOCKER_TAG_TO_PUBLISH=8u302-buster-corretto-headless
-  - DOCKER_IMAGE_BASE=centos:8 JDK_VENDOR=corretto JDK_MAJOR=1.8.0 JDK_VERSION=1.8.0_302.b08 DOCKER_TAG_TO_PUBLISH=8u302-centos8-corretto-headless
+  - DOCKER_IMAGE_BASE=quay.io/centos/centos:stream8 JDK_VENDOR=corretto JDK_MAJOR=1.8.0 JDK_VERSION=1.8.0_302.b08 DOCKER_TAG_TO_PUBLISH=8u302-centos8-corretto-headless
 
 script:
 - pipenv run molecule test --scenario-name=${JDK_VENDOR:-default}
