--- a/vars/adoptopenjdk/Debian-10.yml
+++ b/vars/adoptopenjdk/Debian-10.yml
@@ -10,6 +10,7 @@ __java_required_libs_openjdk: []
 __java_required_repositories_openjdk:
   - deb https://adoptopenjdk.jfrog.io/adoptopenjdk/deb/ {{ ansible_distribution_release }} main
 __java_open_jdk_home_dir: adoptopenjdk-{{ java_open_jdk_version_major }}-hotspot-amd64
+__java_open_jdk_home_dir_arm64: adoptopenjdk-{{ java_open_jdk_version_major }}-hotspot-arm64
 
 __java_required_key_repositories_openjdk:
   - https://adoptopenjdk.jfrog.io/adoptopenjdk/api/gpg/key/public
