--- a/molecule/adoptopenjdk/verify.yml
+++ b/molecule/adoptopenjdk/verify.yml
@@ -29,9 +29,12 @@
 
     - name: Gather OS specific variables
       include_vars: "../../vars/{{  java_jdk_vendor  }}/{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
+
+    - name: Gather architecture specific variables
+      include_vars: "../../vars/architecture.yml"
+
     # Using pattern described in Ansible Best Practices and Conventions (Appendix B), Ansible for Devops (p. 406)
     # Allowing to 'override' variables that are defined using include_vars
-
     - name: Setting OS specific variables
       set_fact:
         java_open_jdk_version: "{{ java_open_jdk_version if java_open_jdk_version is defined and java_open_jdk_version is not sameas None }}"
