--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -28,6 +28,10 @@
   tasks:
     - name: Java | Gather OS specific variables
       include_vars: "../../vars/{{  java_jdk_vendor  }}/{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
+
+    - name: Gather architecture specific variables
+      include_vars: "../../vars/architecture.yml"
+
     # Using pattern described in Ansible Best Practices and Conventions (Appendix B), Ansible for Devops (p. 406)
     # Allowing to 'override' variables that are defined using include_vars
 
