--- a/vars/adoptopenjdk/Debian-10.yml
+++ b/vars/adoptopenjdk/Debian-10.yml
@@ -9,7 +9,7 @@ __java_open_jdk_version_major: 8
 __java_required_libs_openjdk: []
 __java_required_repositories_openjdk:
   - deb https://adoptopenjdk.jfrog.io/adoptopenjdk/deb/ {{ ansible_distribution_release }} main
-__java_open_jdk_home_dir: adoptopenjdk-{{ java_open_jdk_version_major }}-hotspot-{{ 'arm64' if ansible_facts.architecture == 'aarch64' else 'amd64'}}
+__java_open_jdk_home_dir: adoptopenjdk-{{ java_open_jdk_version_major }}-hotspot-{{ java_open_jdk_home_dir_suffix }}
 __java_required_key_repositories_openjdk:
   - https://adoptopenjdk.jfrog.io/adoptopenjdk/api/gpg/key/public
 __java_open_jdk_package: adoptopenjdk-{{ java_open_jdk_version_major }}-hotspot
