--- a/dockerhub/main.yml
+++ b/dockerhub/main.yml
@@ -1,7 +1,6 @@
 ---
 - name: Create Dockerfile, images and build containers
   hosts: localhost
-  connection: local
   gather_facts: false
   tasks:
     - name: Create Dockerfile
@@ -24,29 +23,36 @@
 
     - name: Build containers
       include_tasks: build_containers.yml
-      with_items: ['amd64', 'arm64']
+      with_items: "{{ dockerhub_image_architectures }}"
 
 
 - name: Execute Java role in Docker containers
   hosts: jdk_containers
-  connection: local
+  connection: localhost
+  gather_facts: True
   vars:
     - java_jdk_vendor: "{{ jdk_vendor if jdk_vendor is defined and jdk_vendor is not sameas None and jdk_vendor != '' else 'openjdk' }}"
     - java_open_jdk_version: "{{ jdk_version if jdk_version is defined and jdk_version is not sameas None and jdk_version != '' }}"
     - java_open_jdk_version_major: "{{ jdk_major if jdk_major is defined and jdk_major is not sameas None and jdk_major != ''}}"
-  roles:
-    - java_role
-
+  tasks:
+    - name: Execute role
+      include_tasks: execute_role.yml
 
 - name: Deploy images to DockerHub
   hosts: localhost
   connection: local
-  gather_facts: false
+  gather_facts: True
   tasks:
+
+    - name: Check failed containers
+      set_fact:
+        failed_architectures:  "{{ failed_architectures + [ item ] }}"
+      with_items: "{{ groups['jdk_containers'] }}"
+      when: "{{ hostvars[item]['failed_execution'] is defined and hostvars[item]['failed_execution'] == True }}"
 
     - name: Deploy images
       include_tasks: deploy_images.yml
-      with_items: ['amd64', 'arm64']
+      with_items: "{{ dockerhub_image_architectures }}"
 
 
 - name: Deploy multiarch manifest to DockerHub and cleanup
@@ -56,12 +62,21 @@
   tasks:
 
     - name: Create manifest
-      command: docker manifest create idealista/jdk:{{ docker_tag }}
-                --amend idealista/jdk:{{ docker_tag + '-amd64' }}
-                --amend idealista/jdk:{{ docker_tag + '-arm64' }}
+      command: docker manifest create idealista/jdk:{{ docker_tag }} 
+                {% for architecture in dockerhub_image_architectures %}
+                  {% if failed_architectures is not defined or not failed_architectures | join('|') | regex_search(architecture) %}
+                    --amend idealista/jdk:{{ docker_tag + '-' + architecture }}
+                  {% endif %}
+                {% endfor %}
 
     - name: Push manifest
       command: docker manifest push idealista/jdk:{{ docker_tag }}
 
     - name: Delete builder
       command: docker buildx rm multiarch
+
+    - name: Example using fail and when together
+      fail:
+        msg: Atleast one of the architectures could not be uploaded see logs for more information.
+      when: failed_architectures is defined and failed_architectures | length != 0
+
