#178 add support for java 11 on ubuntu 20 & 22 and java 17 on debian 11 & ubuntu 22

--- a/.travis.yml
+++ b/.travis.yml
@@ -45,14 +45,30 @@ env:
   - DOCKER_IMAGE_BASE=ubuntu:bionic JDK_MAJOR=11 JDK_VERSION=11.0.15+10-0ubuntu0.18.04.1
     DOCKER_TAG_TO_PUBLISH=11.0.13-bionic-openjdk-headless
 
+  - DOCKER_IMAGE_BASE=ubuntu:focal DOCKER_TAG_TO_PUBLISH=11-focal-openjdk-headless
+  - DOCKER_IMAGE_BASE=ubuntu:focal JDK_MAJOR=11 JDK_VERSION=11.0.15+10-0ubuntu0.20.04.1
+    DOCKER_TAG_TO_PUBLISH=11.0.15-focal-openjdk-headless
+
+  - DOCKER_IMAGE_BASE=ubuntu:jammy DOCKER_TAG_TO_PUBLISH=11-jammy-openjdk-headless
+  - DOCKER_IMAGE_BASE=ubuntu:jammy JDK_MAJOR=11 JDK_VERSION=11.0.15+10-0ubuntu0.22.04.1
+    DOCKER_TAG_TO_PUBLISH=11.0.15-jammy-openjdk-headless
+
   - DOCKER_IMAGE_BASE=centos:7 JDK_MAJOR=11 JDK_VERSION=11.0.12.0.7 DOCKER_TAG_TO_PUBLISH=11.0.12.0.7-centos7-openjdk-headless
   - DOCKER_IMAGE_BASE=quay.io/centos/centos:stream8 JDK_MAJOR=11 JDK_VERSION=11.0.13.0.8
     DOCKER_TAG_TO_PUBLISH=11.0.13.0.8-centos8-openjdk-headless
 
   # Java 17
+  - DOCKER_IMAGE_BASE=debian:bullseye-slim DOCKER_TAG_TO_PUBLISH=17-bullseye-openjdk-headless
+  - DOCKER_IMAGE_BASE=debian:bullseye-slim JDK_MAJOR=17 JDK_VERSION=17.0.3+7-1~deb11u1
+    DOCKER_TAG_TO_PUBLISH=17.0.3-bullseye-openjdk-headless
+
   - DOCKER_IMAGE_BASE=ubuntu:focal DOCKER_TAG_TO_PUBLISH=17-focal-openjdk-headless
   - DOCKER_IMAGE_BASE=ubuntu:focal JDK_MAJOR=17 JDK_VERSION=17.0.3+7-0ubuntu0.20.04.1
     DOCKER_TAG_TO_PUBLISH=17.0.3-focal-openjdk-headless
+
+  - DOCKER_IMAGE_BASE=ubuntu:jammy DOCKER_TAG_TO_PUBLISH=17-jammy-openjdk-headless
+  - DOCKER_IMAGE_BASE=ubuntu:jammy JDK_MAJOR=17 JDK_VERSION=17.0.3+7-0ubuntu0.22.04.1
+    DOCKER_TAG_TO_PUBLISH=17.0.3-jammy-openjdk-headless
 script:
 - pipenv run molecule test --scenario-name=${JDK_VENDOR:-default}
 notifications:
