#178 update latest versions of jdk 11 & 17 on debian & ubuntu

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,10 @@ env:
   - DOCKER_IMAGE_BASE=debian:buster-slim JDK_VENDOR=adoptopenjdk JDK_MAJOR=8 JDK_VERSION=8u292-b10-3
     DOCKER_TAG_TO_PUBLISH=8u292-buster-adoptopenjdk-headless
 
-  - DOCKER_IMAGE_BASE=ubuntu:bionic JDK_MAJOR=8 JDK_VERSION=8u312-b07-0ubuntu1~18.04
-    DOCKER_TAG_TO_PUBLISH=8u312-bionic-openjdk-headless
-  - DOCKER_IMAGE_BASE=ubuntu:focal JDK_MAJOR=8 JDK_VERSION=8u312-b07-0ubuntu1~20.04
-    DOCKER_TAG_TO_PUBLISH=8u312-focal-openjdk-headless
+  - DOCKER_IMAGE_BASE=ubuntu:bionic JDK_MAJOR=8 JDK_VERSION=8u342-b07-0ubuntu1~18.04
+    DOCKER_TAG_TO_PUBLISH=8u342-bionic-openjdk-headless
+  - DOCKER_IMAGE_BASE=ubuntu:focal JDK_MAJOR=8 JDK_VERSION=8u342-b07-0ubuntu1~20.04
+    DOCKER_TAG_TO_PUBLISH=8u342-focal-openjdk-headless
 
   - DOCKER_IMAGE_BASE=quay.io/centos/centos:stream8 JDK_VENDOR=adoptopenjdk JDK_MAJOR=8
     JDK_VERSION=8u292_b10 DOCKER_TAG_TO_PUBLISH=8u292-centos8-adoptopenjdk-headless
@@ -42,16 +42,16 @@ env:
     DOCKER_TAG_TO_PUBLISH=11.0.16-bullseye-openjdk-headless
 
   - DOCKER_IMAGE_BASE=ubuntu:bionic DOCKER_TAG_TO_PUBLISH=11-bionic-openjdk-headless
-  - DOCKER_IMAGE_BASE=ubuntu:bionic JDK_MAJOR=11 JDK_VERSION=11.0.15+10-0ubuntu0.18.04.1
-    DOCKER_TAG_TO_PUBLISH=11.0.13-bionic-openjdk-headless
+  - DOCKER_IMAGE_BASE=ubuntu:bionic JDK_MAJOR=11 JDK_VERSION=11.0.16+8-0ubuntu1~18.04
+    DOCKER_TAG_TO_PUBLISH=11.0.16-bionic-openjdk-headless
 
   - DOCKER_IMAGE_BASE=ubuntu:focal DOCKER_TAG_TO_PUBLISH=11-focal-openjdk-headless
-  - DOCKER_IMAGE_BASE=ubuntu:focal JDK_MAJOR=11 JDK_VERSION=11.0.15+10-0ubuntu0.20.04.1
-    DOCKER_TAG_TO_PUBLISH=11.0.15-focal-openjdk-headless
+  - DOCKER_IMAGE_BASE=ubuntu:focal JDK_MAJOR=11 JDK_VERSION=11.0.16+8-0ubuntu1~20.04
+    DOCKER_TAG_TO_PUBLISH=11.0.16-focal-openjdk-headless
 
   - DOCKER_IMAGE_BASE=ubuntu:jammy DOCKER_TAG_TO_PUBLISH=11-jammy-openjdk-headless
-  - DOCKER_IMAGE_BASE=ubuntu:jammy JDK_MAJOR=11 JDK_VERSION=11.0.15+10-0ubuntu0.22.04.1
-    DOCKER_TAG_TO_PUBLISH=11.0.15-jammy-openjdk-headless
+  - DOCKER_IMAGE_BASE=ubuntu:jammy JDK_MAJOR=11 JDK_VERSION=11.0.16+8-0ubuntu1~22.04
+    DOCKER_TAG_TO_PUBLISH=11.0.16-jammy-openjdk-headless
 
   - DOCKER_IMAGE_BASE=centos:7 JDK_MAJOR=11 JDK_VERSION=11.0.12.0.7 DOCKER_TAG_TO_PUBLISH=11.0.12.0.7-centos7-openjdk-headless
   - DOCKER_IMAGE_BASE=quay.io/centos/centos:stream8 JDK_MAJOR=11 JDK_VERSION=11.0.13.0.8
@@ -59,16 +59,16 @@ env:
 
   # Java 17
   - DOCKER_IMAGE_BASE=debian:bullseye-slim DOCKER_TAG_TO_PUBLISH=17-bullseye-openjdk-headless
-  - DOCKER_IMAGE_BASE=debian:bullseye-slim JDK_MAJOR=17 JDK_VERSION=17.0.3+7-1~deb11u1
-    DOCKER_TAG_TO_PUBLISH=17.0.3-bullseye-openjdk-headless
+  - DOCKER_IMAGE_BASE=debian:bullseye-slim JDK_MAJOR=17 JDK_VERSION=17.0.4+8-1~deb11u1
+    DOCKER_TAG_TO_PUBLISH=17.0.4-bullseye-openjdk-headless
 
   - DOCKER_IMAGE_BASE=ubuntu:focal DOCKER_TAG_TO_PUBLISH=17-focal-openjdk-headless
-  - DOCKER_IMAGE_BASE=ubuntu:focal JDK_MAJOR=17 JDK_VERSION=17.0.3+7-0ubuntu0.20.04.1
-    DOCKER_TAG_TO_PUBLISH=17.0.3-focal-openjdk-headless
+  - DOCKER_IMAGE_BASE=ubuntu:focal JDK_MAJOR=17 JDK_VERSION=17.0.4+8-1~20.04
+    DOCKER_TAG_TO_PUBLISH=17.0.4-focal-openjdk-headless
 
   - DOCKER_IMAGE_BASE=ubuntu:jammy DOCKER_TAG_TO_PUBLISH=17-jammy-openjdk-headless
-  - DOCKER_IMAGE_BASE=ubuntu:jammy JDK_MAJOR=17 JDK_VERSION=17.0.3+7-0ubuntu0.22.04.1
-    DOCKER_TAG_TO_PUBLISH=17.0.3-jammy-openjdk-headless
+  - DOCKER_IMAGE_BASE=ubuntu:jammy JDK_MAJOR=17 JDK_VERSION=17.0.4+8-1~22.04
+    DOCKER_TAG_TO_PUBLISH=17.0.4-jammy-openjdk-headless
 script:
 - pipenv run molecule test --scenario-name=${JDK_VENDOR:-default}
 notifications:
