--- a/meta/main.yml
+++ b/meta/main.yml
@@ -9,14 +9,13 @@ galaxy_info:
   platforms:
     - name: Debian
       versions:
-        - stretch
         - buster
         - bullseye
     - name: Ubuntu
       versions:
-        - xenial
         - bionic
         - focal
+        - jammy
     - name: EL
       versions:
         - "7"
