--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
 - docker
 install:
 - pip install pipenv
-- pipenv sync
+- pipenv install -r test-requirements.txt
 env:
   global:
   - PY_COLOR=1
