--- a/vars/corretto/Debian-11.yml
+++ b/vars/corretto/Debian-11.yml
@@ -5,6 +5,7 @@ java_open_jdk_apt_extra_packages:
   - gnupg2
 
 __java_open_jdk_version_major: 1.8.0
+__java_keystore_dir: jre/lib/security
 # Supported versions: 8 (1.8.0L), 11
 
 __java_required_repositories_openjdk:
