--- a/vars/adoptopenjdk/Debian-10.yml
+++ b/vars/adoptopenjdk/Debian-10.yml
@@ -3,6 +3,7 @@ java_open_jdk_apt_extra_packages:
   - python-apt
   - apt-transport-https
 __java_open_jdk_version_major: 8
+__java_keystore_dir: jre/lib/security
 # Supported major releases: 8 and from 11 to 14; hotspot and openj9 implementations
 
 # For Debian family
