--- a/vars/openjdk/CentOS-8.yml
+++ b/vars/openjdk/CentOS-8.yml
@@ -2,6 +2,7 @@
 
 # Using pattern described in Ansible Best Practices and Conventions (Appendix B), Ansible for Devops (p. 406)
 __java_open_jdk_version_major: 11
+__java_keystore_dir: lib/security
 # Supported openjdk major releases: 1.8.0, 11
 
 __java_required_repositories_openjdk: []
