--- a/vars/openjdk/Ubuntu-18.yml
+++ b/vars/openjdk/Ubuntu-18.yml
@@ -6,6 +6,7 @@ java_open_jdk_apt_extra_packages:
 
 # Using pattern described in Ansible Best Practices and Conventions (Appendix B), Ansible for Devops (p. 406)
 __java_open_jdk_version_major: 11
+__java_keystore_dir: lib/security
 # Supported openjdk major releases: 8, 11
 
 __java_required_repositories_openjdk: []
