resolve #207 fix molecule scenario name

--- a/molecule/openjdk-certs/molecule.yml
+++ b/molecule/openjdk-certs/molecule.yml
@@ -23,6 +23,6 @@ provisioner:
         java_open_jdk_version: ${JDK_VERSION}
         java_open_jdk_version_major: ${JDK_MAJOR}
 scenario:
-  name: certs
+  name: openjdk-certs
 verifier:
   name: ansible
