#210 - Migrate to Adoptium temurin. Added stretch support

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -9,6 +9,7 @@ galaxy_info:
   platforms:
     - name: Debian
       versions:
+        - stretch
         - buster
         - bullseye
         - bookworm
