--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,10 @@ env:
     DOCKER_TAG_TO_PUBLISH=8u382-bullseye-temurin-jdk
   - DOCKER_IMAGE_BASE=debian:buster-slim JDK_VENDOR=temurin JDK_MAJOR=8 JDK_VERSION=8.0.382.0.0+5
     DOCKER_TAG_TO_PUBLISH=8u382-buster-temurin-jdk
+  - DOCKER_IMAGE_BASE=debian:stretch-slim JDK_VENDOR=temurin JDK_MAJOR=8 JDK_VERSION=8.0.322.0.0+6-1
+    DOCKER_TAG_TO_PUBLISH=8u322-buster-temurin-jdk
+
+  - DOCKER_IMAGE_BASE=debian:stretch-slim JDK_MAJOR=8 DOCKER_TAG_TO_PUBLISH=8-stretch-openjdk-headless
 
   - DOCKER_IMAGE_BASE=ubuntu:bionic JDK_MAJOR=8 JDK_VERSION=8u372-ga~us1-0ubuntu1~18.04
     DOCKER_TAG_TO_PUBLISH=8u372-bionic-openjdk-headless
