--- a/tasks/install_openjdk.yml
+++ b/tasks/install_openjdk.yml
@@ -119,11 +119,15 @@
   alternatives:
     name: java
     path: "/usr/lib/jvm/{{ java_open_jdk_home_dir }}/jre/bin/java"
-  when: "ansible_os_family == 'Debian' and java_open_jdk_version_major < '11'"
+  when: 
+    - ansible_os_family == 'Debian' 
+    - java_open_jdk_version_major | int < 11
 
 
 - name: "Correct java version selected /usr/lib/jvm/{{ java_open_jdk_home_dir }}/bin/java in java >= 11"
   alternatives:
     name: java
     path: "/usr/lib/jvm/{{ java_open_jdk_home_dir }}/bin/java"
-  when: "ansible_os_family == 'Debian' and java_open_jdk_version_major >= '11'"
+  when: 
+    - ansible_os_family == 'Debian' 
+    - java_open_jdk_version_major | int >= 11
