--- a/vars/openjdk/Debian-11.yml
+++ b/vars/openjdk/Debian-11.yml
@@ -14,3 +14,5 @@ __java_open_jdk_package: openjdk-{{ java_open_jdk_version_major }}-jdk-headless
 __java_open_jdk_home_dir: java-{{ java_open_jdk_version_major }}-openjdk-{{ java_open_jdk_home_dir_suffix }}
 
 ansible_python_interpreter: /usr/bin/python3
+__java_deprecated_repositories_adoptopenjdk:
+  - deb https://adoptopenjdk.jfrog.io/adoptopenjdk/deb/ {{ ansible_distribution_release }} main
