--- a/vars/openjdk/Ubuntu-18.yml
+++ b/vars/openjdk/Ubuntu-18.yml
@@ -15,3 +15,4 @@ __java_required_key_repositories_openjdk: []
 
 __java_open_jdk_package: openjdk-{{ java_open_jdk_version_major }}-jdk-headless
 __java_open_jdk_home_dir: java-{{ java_open_jdk_version_major }}-openjdk-{{ java_open_jdk_home_dir_suffix }}
+__java_deprecated_repositories_adoptopenjdk: []
