--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ python: 3.9
 sudo: required
 services:
 - docker
+addons:
+  apt:
+    packages:
+      - docker-ce
 install:
 - pip install pipenv
 - pipenv sync
@@ -48,8 +52,8 @@ env:
 
   # Java 11
   - DOCKER_IMAGE_BASE=debian:buster-slim DOCKER_TAG_TO_PUBLISH=11-buster-openjdk-headless
-  - DOCKER_IMAGE_BASE=debian:buster-slim JDK_MAJOR=11 JDK_VERSION=11.0.18+10-1~deb10u1
-    DOCKER_TAG_TO_PUBLISH=11.0.18-buster-openjdk-headless
+  - DOCKER_IMAGE_BASE=debian:buster-slim JDK_MAJOR=11 JDK_VERSION=11.0.20+8-1~deb11u1
+    DOCKER_TAG_TO_PUBLISH=11.0.20-buster-openjdk-headless
   - DOCKER_IMAGE_BASE=debian:bullseye-slim DOCKER_TAG_TO_PUBLISH=11-bullseye-openjdk-headless
   - DOCKER_IMAGE_BASE=debian:bullseye-slim JDK_MAJOR=11 JDK_VERSION=11.0.18+10-1~deb11u1
     DOCKER_TAG_TO_PUBLISH=11.0.18-bullseye-openjdk-headless
@@ -108,6 +112,7 @@ env:
     DOCKER_TAG_TO_PUBLISH=17.0.8-jammy-temurin-jdk
 
 script:
+- docker --version
 - pipenv run molecule test --scenario-name=${JDK_VENDOR:-default}
 notifications:
   webhooks:
