--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,8 @@
 dist: jammy
 language: python
 python: 3.9
-before_install:
-  - sudo rm -rf /var/lib/apt/lists/*
-  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-  - sudo add-apt-repository -y "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
-  - sudo apt-get update
-  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+services:
+- docker
 install:
 - pip install pipenv
 - pipenv sync
@@ -112,6 +108,7 @@ env:
 
 script:
 - docker --version
+- docker buildx version
 - pipenv run molecule test --scenario-name=${JDK_VENDOR:-default}
 notifications:
   webhooks:
